added metadata charts (highly experimental)

--- a/public/partials/metadata.html
+++ b/public/partials/metadata.html
@@ -1,20 +1,44 @@
 <div id="metadata" style="padding: 10px 0 0 10px;">
-    <p style="font-size:16px">Metadata Overview</p>
+    <p style="font-size:16px; display: inline-block">Metadata Overview</p>
+    <ul class="nav nav-tabs" style="display: inline-block">
+        <li class="active"><a data-toggle="tab" href="#entities_tab">entities</a></li>
+        <li><a data-toggle="tab" href="#metadata_tab">metadata</a></li>
+    </ul>
 
+    <div id="metadata_tabs" class="tab-content">
+        <div id="entities_tab" class="tab-pane fade in active">
     <uib-tabset id="metadata-overview" >
-        <uib-tab ng-repeat="metaType in metadataTypes"
-                heading="{{metaType}}"
+        <uib-tab ng-repeat="entityType in entityTypes"
+                heading="{{entityType}}"
                  classes="fade in meta-chart-container"
                  ng-click="reflow()"
                 >
 
                 <div class="scroll-chart">
-                    <div id="chart_{{metaType| lowercase}}" class="meta-chart" ></div>
+                    <div id="chart_{{entityType| lowercase}}" class="meta-chart" ></div>
                 </div>
 
 
         </uib-tab>
+    </uib-tabset>
+        </div>
+        <div id="metadata_tab" class="tab-pane fade in">
+            <uib-tabset id="metadata-overview2" >
+                <uib-tab ng-repeat="metaType in metadataTypes"
+                         heading="{{metaType}}"
+                         classes="fade in meta-chart-container"
+                         ng-click="reflow()"
+                >
+
+                    <div class="scroll-chart">
+                        <div id="chart_meta_{{metaType| lowercase}}" class="meta-chart" ></div>
+                    </div>
+
+
+                </uib-tab>
+            </uib-tabset>
+        </div>
+</div>
 
     </uib-tabset>
-
   </div>
