--- a/public/partials/metadata.html
+++ b/public/partials/metadata.html
@@ -1,12 +1,12 @@
 <div id="metadata" style="padding: 10px 0 0 10px;">
     <p style="font-size:16px; display: inline-block">Metadata Overview</p>
     <ul class="nav nav-tabs" style="display: inline-block">
-        <li class="active"><a data-toggle="tab" href="#entities_tab">entities</a></li>
-        <li><a data-toggle="tab" href="#metadata_tab">metadata</a></li>
+        <li><a data-toggle="tab" href="#entities_tab">entities</a></li>
+        <li class="active"><a data-toggle="tab" href="#metadata_tab">metadata</a></li>
     </ul>
 
     <div id="metadata_tabs" class="tab-content">
-        <div id="entities_tab" class="tab-pane fade in active">
+        <div id="entities_tab" class="tab-pane fade in">
     <uib-tabset id="metadata-overview" >
         <uib-tab ng-repeat="entityType in entityTypes"
                 heading="{{entityType}}"
@@ -22,7 +22,7 @@
         </uib-tab>
     </uib-tabset>
         </div>
-        <div id="metadata_tab" class="tab-pane fade in">
+        <div id="metadata_tab" class="tab-pane fade in active">
             <uib-tabset id="metadata-overview2" >
                 <uib-tab ng-repeat="metaType in metadataTypes"
                          heading="{{metaType}}"
