commented out map tab

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -64,16 +64,16 @@
                             <!-- Nav tabs -->
                         <ul class="nav nav-tabs" role="tablist">
                             <li role="presentation" class="active"><a href="#network" aria-controls="network" role="tab" data-toggle="tab">Network</a></li>
-                            <li role="presentation"><a href="#map" aria-controls="map" role="tab" data-toggle="tab">Map</a></li>
+                            <!--<li role="presentation"><a href="#map" aria-controls="map" role="tab" data-toggle="tab">Map</a></li>-->
                         </ul>
                             <!-- Tab panes -->
                         <div class="tab-content">
                             <div role="tabpanel" class="tab-pane active" id="network" ng-controller="NetworkController">
                                 <div ng-include=" 'assets/partials/network.html' " onload="loaded()"></div>
                             </div>
-                            <div role="tabpanel" class="tab-pane" id="map" ng-controller="MapController">
+                            <!--<div role="tabpanel" class="tab-pane" id="map" ng-controller="MapController">
                                 <div ng-include=" 'assets/partials/map.html' " onload="loaded()"></div>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
 
