--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -60,6 +60,7 @@
                 </nav>
 
                 <main id="center-box" resizable r-directions="['right']" r-flex="true" flex="none">
+                    <div ng-controller="ToolController" ng-include=" 'assets/partials/tools.html' "></div>
                     <div id="network-maps-container">
                             <!-- Nav tabs -->
                         <ul class="nav nav-tabs" role="tablist">
