expanded the edit buttons over the whole dropdown menu

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -156,6 +156,10 @@ div.tooltip {
     z-index: 1000;
 }
 
+.btn-block-dropdown {
+    display: block;
+}
+
 .legend-heading {
     font-weight: bold;
     text-decoration: underline;
