--- a/public/partials/history.html
+++ b/public/partials/history.html
@@ -2,7 +2,9 @@
 	<p style="font-size:16px; float: left; padding-top: 10px">History Tracker</p>
 	<ul id="historyList" class="list-group" style="display: inline-block; padding: 3px 10px; margin: 0 0 0 10px;">
 		<li class="filterListItem list-group-item" ng-repeat="obj in history" style="display: inline-block; padding: 7px 10px;">
-			{{obj.type}}: {{obj.data.name}}:{{obj.data.type}} ({{obj.action}})
+			<i class="glyphicon type-icon glyphicon-{{ getIcon(obj.type) }}" ng-class=""></i>
+			<i class="glyphicon action-icon glyphicon-{{ getActionIcon(obj.action) }}" ng-class=""></i>
+			<span>{{obj.type}}: {{obj.data.name}}</span><span ng-if="obj.data.type"> ({{obj.data.type}})</span>
 		</li>
 	</ul>
 </div>
