--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -54,7 +54,7 @@
         <div id="wrapper" layout="column" ng-cloak layout-fill>
             <header><div ui-view="header"></div></header>
             <div id="history" resizable r-directions="['bottom']" r-flex="true"><div ui-view="history" style="overflow-y: hidden;"></div></div>
-            <div id="flex-body" flex="auto" class="flex-row" layout="row">
+            <div id="flex-body" flex="none" class="flex-row" layout="row"  resizable r-directions="['bottom']">
                 <nav id="document" flex="initial" resizable r-directions="['right']" r-flex="true">
                     <div ui-view="documentlist"></div>
                 </nav>
@@ -85,7 +85,7 @@
                 </aside>
 
             </div>
-            <footer id="footer" flex="none" resizable r-directions="['top']" r-flex="true">
+            <footer id="footer" flex="" r-flex="true">
                 <div ui-view="chart"></div>
             </footer>
         </div>
