commented out noon functional filter save buttons

--- a/public/partials/filter.html
+++ b/public/partials/filter.html
@@ -1,7 +1,7 @@
 <div style="padding: 10px;">
 	<p style="font-size:16px">Filter Overview</p>
 
-	<button
+	<!--<button
 			type="button"
 			id="SaveButton"
 			class="btn btn-small btn-primary"
@@ -20,7 +20,7 @@
 		<i class="glyphicon glyphicon-open"></i>
 		Load
 	</button>
-
+-->
 	<div class="alert alert-info" ng-show="filterShared.wordFilters.length == 0">
 		<p>No filter has been loaded</p>
 	</div>
