--- a/public/partials/metadata.html
+++ b/public/partials/metadata.html
@@ -1,5 +1,5 @@
 <div id="metadata" style="padding: 10px 0 0 10px;">
-    <p style="font-size:16px; display: inline-block">Metadata Overview</p>
+    <p style="font-size:16px; display: inline-block">Frequency Overview</p>
     <ul class="nav nav-tabs" style="display: inline-block">
         <li><a data-toggle="tab" href="#entities_tab">entities</a></li>
         <li class="active"><a data-toggle="tab" href="#metadata_tab">metadata</a></li>
