--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -53,7 +53,10 @@
 
         <div id="wrapper" layout="column" ng-cloak layout-fill>
             <header><div ui-view="header"></div></header>
-            <div id="history" resizable r-directions="['bottom']" r-flex="true"><div ui-view="history"></div></div>
+            <div id="top-container" layout="row" resizable r-directions="['bottom']" r-flex="true">
+                <div id="search-bar" flex="25" resizable r-directions="['right']" r-flex="true"><div ui-view="search"></div></div>
+                <div id="history" flex="75"><div ui-view="history"></div></div>
+            </div>
             <div id="flex-body" flex="none" class="flex-row" layout="row"  resizable r-directions="['bottom']">
                 <nav id="document" flex="initial" resizable r-directions="['right']" r-flex="true">
                     <div ui-view="documentlist"></div>
