less info in history item box

--- a/public/partials/history.html
+++ b/public/partials/history.html
@@ -25,7 +25,7 @@
 
 			<i class="glyphicon type-icon glyphicon-{{ getIcon(obj.type) }}" ng-class=""></i>
 			<i class="glyphicon action-icon glyphicon-{{ getActionIcon(obj.action) }}" ng-class=""></i>
-			<span>{{obj.type}}: {{obj.data.name}}</span><span ng-if="obj.data.type"> ({{obj.data.type}})</span>
+			<span>{{obj.data.name}}</span>
 		</li>
 	</ul>
 
