--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -90,7 +90,7 @@
 
             </div>
             <footer id="footer" flex="" r-flex="true">
-                <div ui-view="chart"></div>
+                <div ui-view="histogram"></div>
             </footer>
         </div>
 
