--- a/public/partials/histogram.html
+++ b/public/partials/histogram.html
@@ -14,4 +14,4 @@
   limitations under the License.
  -->
 
-<highchart id="chartBarchart" config="chartConfig"></highchart>
+<div id="histogram"></div>
