smallered the buttons and removed unnecessary stuff when rearranging the button and removed unnecessary sliders in the settings

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -66,11 +66,7 @@ html, body {
 
 line {
     /* Should be the same as edgeLegend#fill */
-    stroke: #696969;
-}
-
-.edgepath {
-    stroke: #F5F5F5;
+    stroke: #d0d0d0;
 }
 
 .dropdown-button-menu
