--- a/public/partials/tools.html
+++ b/public/partials/tools.html
@@ -17,7 +17,7 @@
 <div class="container-fluid" ng-if="!toolShareService.isViewLoading()">
   <div class="row">
     <div id="demo" class="collapse col-md-10">
-      <div class="slider-container">
+      <!--<div class="slider-container">
         <input ng-model="sliderCountriesCitiesAmount.value" type="text"
                slider options="sliderCountriesCitiesAmount.options"/>
       </div>
@@ -33,11 +33,11 @@
         <input ng-model="sliderMiscellaneousAmount.value" type="text"
                slider options="sliderMiscellaneousAmount.options"/>
       </div>
-
+-->
       <div class="slider-container">
         <input ng-model="sliderEdgeFrequency.value" type="text" slider options="sliderEdgeFrequency.options"/>
       </div>
-      <toggle-switch
+      <!--<toggle-switch
               class="toggle-switch"
               ng-model="toolShareService.freqSortingLeast"
               on-label="Least"
@@ -46,7 +46,7 @@
       >
 
       </toggle-switch> frequent entities / relations
-
+-->
     </div>
 
     <!-- Show sliders -->
