added some smaller improvements, namely the filter selection, and darkened the edges and added a function to the button. Also removed edge tooltips

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -66,7 +66,7 @@ html, body {
 
 line {
     /* Should be the same as edgeLegend#fill */
-    stroke: #d0d0d0;
+    stroke: #b0b0b0;
 }
 
 .dropdown-button-menu
